# aumos-auth-gateway

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: api-reference.md  architecture.md  helm-reference.md  index.md  quickstart.md  troubleshooting.md
docs/docs/guides/: agent-identity.md  k8s-oidc.md  passkeys.md  rate-limiting.md  session-management.md
src/aumos_auth_gateway/: __init__.py  main.py  settings.py
src/aumos_auth_gateway/adapters/: __init__.py  agent_privilege_audit.py  enterprise_idp.py  kafka.py  keycloak_client.py  kong_client.py  mfa_engine.py  repositories.py  saml_adapter.py
src/aumos_auth_gateway/agent_identity/: __init__.py  certificate_authority.py  identity_manager.py  token_service.py
src/aumos_auth_gateway/api/: __init__.py  agent_identity_routes.py  auth_routes.py  router.py  schemas.py
src/aumos_auth_gateway/core/: __init__.py  interfaces.py  k8s_token_validator.py  models.py  opa_client.py  services.py
tests/: __init__.py  conftest.py  test_agent_identity.py
